 * Removed Django admin management of `Page` & `Site` models (Andreas Bernacca)
 * Cleaned up Django docs URLs in documentation (Pete Andrew)
 * Add StreamFieldPanel to available panel types in documentation (Dan Swain)
 * Add {{ block.super }} example to ModelAdmin customisation in documentation (Dan Swain)
 * Add ability to filter image index by a tag (Benedikt Willi)
 * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
 * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
 * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
 * Fix: Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
 * Fix: Moved `get_document_model` location so it can be imported when Models are not yet loaded (Andrey Smirnov)
 * Fix: Fixed incorrect HTML escaping of Jinja2 form templates for StructBlocks (Brady Moe)
 * Fix: All templates with wagtailsettings and modeladmin now use `block.super` for `extra_js` & `extra_css` (Timothy Bautista)
 * Fix: Layout issue when using FieldRowPanel with a heading (Andreas Bernacca)
 * Fix: `file_size` and `file_hash` not updated when Document file changed (Andreas Bernacca)

2.7 LTS (06.11.2019)
~~~~~~~~~~~~~~~~~~~~

 * Improved StreamField design (Bertrand Bordage)
 * Added WebP image support (frmdstryr, Karl Hobley, Matt Westcott)
 * Added Elasticsearch 7 support (pySilver)
 * Added Python 3.8 support (John Carter, Matt Westcott)
 * Added `construct_page_listing_buttons` hook (Michael van Tellingen)
 * Added more detailed documentation and troubleshooting for installing OpenCV for feature detection (Daniele Procida)
 * Added Table Block caption for accessibility (Rahmi Pruitt)
 * Move and refactor upgrade notification JS (Jonny Scholes)