@@ -27,6 +27,7 @@ Other features
  * Add StreamFieldPanel to available panel types in documentation (Dan Swain)
  * Add {{ block.super }} example to ModelAdmin customisation in documentation (Dan Swain)
  * Add ability to filter image index by a tag (Benedikt Willi)
+ * Add formal support for nested InlinePanels (Matt Westcott)
 
 
 Bug fixes
